# coinflip-solana

./: .gitignore  Anchor.toml  anchor_escrow.json  coin_flip.json  lock.json
app/: package-lock.json  package.json
app/src/: App.js  idl.json
config/solana/: id.json
programs/anchor-escrow/src/: lib.rs
programs/coinflip/: Cargo.toml  README.md
programs/coinflip/src/: lib.rs
programs/lock/: Cargo.toml
programs/lock/src/: lib.rs
