[package]
name = "coinflip"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "coinflip"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.16.1"
anchor-spl = "0.16.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
solana-program = "1.7.11"
